@@ -1,3 +1,9 @@
+
+2002-07-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scripts/lilypond-book.py: patches by Tom Cato Amundsen.  Adds
+	support for the columnsep when using the geometry package.
+	
 2002-07-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/grob-property-description.scm (minimum-space-pair): Remove.
